--- a/index.html
+++ b/index.html
@@ -76,8 +76,15 @@
                 </p>
                 <a href="https://github.com/FranciscoMaggi23/aplicacion-con-c-sharp-y-.Net" target="_blank">Repositorio Github</a>
             </div>
+            <div class="card">
+                <h3>Sistema de ventas</h3>
+                <img src="sistemaVenta.png">
+                <p>
+                    Aplicación para registrar usuarios, provedores y productos, generar reportes de compras y ventas, en documentos pdf y excel.
+                </p>
+                <a href="https://github.com/FranciscoMaggi23/aplicacion-con-c-sharp-y-.Net" target="_blank">Repositorio Github</a>
+            </div>
         </div>
-    </section>
     <footer>
         <h2>Contactame</h2>
             <div class="contacto">
